Added text-detail with char limiting, page break

--- a/AtlasForms/Views/Checklist/Index.cshtml
+++ b/AtlasForms/Views/Checklist/Index.cshtml
@@ -183,8 +183,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.CopyOfContractorPOComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.CopyOfContractorPOComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.CopyOfContractorPOComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.CopyOfContractorPOComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -196,8 +197,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.BrokenScopephasesComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.BrokenScopephasesComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.BrokenScopephasesComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.BrokenScopephasesComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -209,8 +211,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.BidRollUpComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.BidRollUpComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.BidRollUpComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.BidRollUpComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -222,8 +225,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.PackCFSPIRollUpcomments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.PackCFSPIRollUpcomments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.PackCFSPIRollUpcomments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.PackCFSPIRollUpcomments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -235,8 +239,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.ApplicableQuoteComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.ApplicableQuoteComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.ApplicableQuoteComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.ApplicableQuoteComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -248,8 +253,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.DrawingConditionsComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.DrawingConditionsComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.DrawingConditionsComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.DrawingConditionsComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -261,8 +267,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.SitePhotosComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.SitePhotosComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.SitePhotosComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.SitePhotosComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -274,8 +281,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.HardCardComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.HardCardComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.HardCardComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.HardCardComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -287,8 +295,9 @@
                         </div>
                         @Html.LabelFor(model => model.contractPaperWork.PayEnvelopeComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.contractPaperWork.PayEnvelopeComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.contractPaperWork.PayEnvelopeComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.contractPaperWork.PayEnvelopeComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
 
@@ -307,8 +316,9 @@
                         </div>
                         @Html.LabelFor(model => model.bondingInsurance.InsuranceCertificationComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.bondingInsurance.InsuranceCertificationComments, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.bondingInsurance.InsuranceCertificationComments, new { @class = "form-control text-detail" })
                             @Html.ValidationMessageFor(model => model.bondingInsurance.InsuranceCertificationComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                 </div>
@@ -329,8 +339,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.SafetyOfficerComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.SafetyOfficerComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.SafetyOfficerComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.SafetyOfficerComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -342,8 +353,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.SafetyMeetingComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.SafetyMeetingComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.SafetyMeetingComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.SafetyMeetingComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -355,8 +367,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.DailySafetyMeetingComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.DailySafetyMeetingComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.DailySafetyMeetingComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.DailySafetyMeetingComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -368,8 +381,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.PPENeededComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.PPENeededComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.PPENeededComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.PPENeededComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -381,8 +395,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.FallProtectionComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.FallProtectionComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.FallProtectionComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.FallProtectionComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -394,8 +409,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.EquipmentCertificationComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.EquipmentCertificationComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.EquipmentCertificationComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.EquipmentCertificationComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                     <div class="form-group">
@@ -407,8 +423,9 @@
                         </div>
                         @Html.LabelFor(model => model.safetyRequirements.OtherHazardsComments, htmlAttributes: new { @class = "control-label col-md-1 project-labels" })
                         <div class="col-md-4">
-                            @Html.TextAreaFor(model => model.safetyRequirements.OtherHazardsComments, new { @class = "form-control safety-comments" })
+                            @Html.TextAreaFor(model => model.safetyRequirements.OtherHazardsComments, new { @class = "form-control safety-comments text-detail" })
                             @Html.ValidationMessageFor(model => model.safetyRequirements.OtherHazardsComments, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                 </div>
@@ -420,8 +437,9 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.otherImportantFactors.OtherPertinentInformation, htmlAttributes: new { @class = "control-label col-md-3 project-labels" })
                         <div class="col-md-7">
-                            @Html.TextAreaFor(model => model.otherImportantFactors.OtherPertinentInformation, new { @class = "form-control" })
+                            @Html.TextAreaFor(model => model.otherImportantFactors.OtherPertinentInformation, new { @class = "form-control text-detail-1" })
                             @Html.ValidationMessageFor(model => model.otherImportantFactors.OtherPertinentInformation, "", new { @class = "text-danger" })
+                            <span class="counter badge"></span>
                         </div>
                     </div>
                 </div>
@@ -519,6 +537,8 @@
             $('form').attr('autocomplete', 'off');
             $(".info-field").attr('readonly', 'readonly');
             $(".info-field").css("background-color", "#f1f1f1");
+            $(".text-detail").attr("maxlength", 150);
+            $(".text-detail-1").attr("maxlength", 500);
             $("#projectInformation_CustomerProfile_PhoneNumber, #projectInformation_ProjectProfile_PhoneNumber").inputmask({ "mask": "(999) 999-9999" });
             $("#print").hide();
 
@@ -547,6 +567,17 @@
                     return false;
                 }
             }
+
+
+            $("textarea").on("keyup", function (e) {
+                var maxlen = $(this).attr("maxlength");
+                var textlen = $(this).val().length;
+                counter = maxlen - textlen;
+                $($(this).closest("div").find(".counter")).html(counter + " characters left");
+                if (maxlen == textlen) {
+                    return;
+                }
+            })
 
             if (!IsValidNo($("#PRJID").val())) {
                 $("#btnSaveActivation").attr("disabled", "disabled");
